# claude-issueops

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.ja.md  README.md  VERIFICATION.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
.spec-workflow/user-templates/: test-design-template.md
docs/: PRD.md
docs/design/: epic-01-target-flag.md
hooks/: hooks.json
scripts/: cleanup-l3-verification-issues.sh  l3-acceptance.sh
skills/session-closer/: SKILL.md
src/issueops/: branch_resolver.py  decision_extractor.py  dedup_checker.py  gh_adapters.py  issue_resolver.py  marker_parser.py  memory_escalate.py  path_utils.py  (+9 more)
tests/: conftest.py  test_bin_session_closer.py  test_branch_resolver.py  test_decision_extractor.py  test_dedup_checker.py  test_gh_adapters.py  test_issue_resolver.py  test_marker_parser.py  test_memory_escalate.py  test_path_utils.py  test_pending_decisions.py  test_precompact.py  test_session_closer.py  test_session_end.py  test_skill_md.py  test_state_save.py  test_state_writer.py  test_transcript_reader.py  test_user_prompt_submit.py  test_verification_fixture.py
verification-fixtures/: v1-approve-all.json  v10-state-corrupt.json  v11-memory-content.json  v12-abort-on-failure.json  v13-abort.json  v13-discard.json  v14-skill-frontmatter.json  v15-mode-switch.json  v2-save-on-failure.json  v3-approve-one.json  v4-mixed-scope.json  v5-reject-all.json  v6-cross-issue.json  v7-override-to-issue.json  v8-approve-all.json  v9-pick-issue.json
(+7 files in other folders)
